--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,25 @@
   box-sizing: border-box;
 }
 
+img {
+  width: 100%;
+}
 
 body {
   background-color: var(--yellow);
+  font-family: "Figtree", sans-serif;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+main {
+  background-color: var(--white);
+  width: 327px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 24px;
+  border-radius: 20px;
+}
+
